--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,7 +18,7 @@
   $white: #fff;
 
   --text-color: $darkGray;
-  --background-color: white;
+  --background-color: $white;
 
   --border-color: var(--text-color);
   --border-radius: 3px;
