Use a FileChange instead

--- a/styles/ui/_commit-summary.scss
+++ b/styles/ui/_commit-summary.scss
@@ -7,7 +7,7 @@
   flex: 1;
 
   .files {
-    .name {
+    .path {
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
