colour the background for the diff

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -18,3 +18,11 @@
   word-wrap: break-word;
   word-break: break-all;
 }
+
+.diff-add {
+  background: #EAFFEA;
+}
+
+.diff-delete {
+  background: #FFECEC;
+}
