prefer box-border-color

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -21,7 +21,6 @@
   --text-color: $darkGray;
   --background-color: $white;
 
-  --input-border-color: $gray;
   --input-border-hover-color: $blue;
 
   --button-background: $lighterGray;
@@ -67,7 +66,7 @@
   /**
    * Border color for boxes.
    */
-  --box-border-color: $darkGray;
+  --box-border-color: $gray;
 
   /**
    * Background color for selected boxes without keyboard focus
