--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -2,7 +2,7 @@
 
 /** A React component holding the commit message entry */
 #commit-message {
-  border-top: 1px solid var(--input-border-color);
+  border-top: 1px solid var(--box-border-color);
   flex-direction: row;
   align-self: flex-end;
   margin-top: auto;
