--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -8,6 +8,6 @@
   margin-top: auto;
 
   display: block;
-  background-color: #f9f9f9;
+  background-color: var(--box-alt-background-color);
   padding: var(--spacing);
 }
