port over the existing rules for determining the row counts in diffs

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -19,6 +19,10 @@
   word-break: break-all;
 }
 
+.diff-text .before, .diff-text .after  {
+  color: #CCC
+}
+
 .diff-add {
   background: #EAFFEA;
 }
