--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -3,11 +3,10 @@
 /** A React component holding the commit message entry */
 #commit-message {
   border-top: 1px solid var(--box-border-color);
-  flex-direction: row;
-  align-self: flex-end;
+  flex-direction: column;
   margin-top: auto;
 
-  display: block;
+  display: flex;
   background-color: var(--box-alt-background-color);
   padding: var(--spacing);
 }
