Use position absolute to work around rendering issue
See
https://github.com/desktop/desktop/pull/156/files/1e1fef56dfc01cd4c8804a699f2117e512c55981#r72529904

Without this the hit detection in electron would be all messed up.

--- a/app/styles/ui/_list.scss
+++ b/app/styles/ui/_list.scss
@@ -7,8 +7,9 @@
 
     overflow: auto;
     transform: translate3d(0, 0, 0);
+    position: relative;
 
-    .list-item { position: fixed; }
+    .list-item { position: absolute; }
   }
 }
 
