Add panel class

--- a/app/styles/ui/_changes.scss
+++ b/app/styles/ui/_changes.scss
@@ -2,7 +2,5 @@
 
 /** A React component holding the currently selected repository's changes */
 #changes {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
+  border-style: solid;
 }
