--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -2,16 +2,13 @@
 
 /** A React component holding the currently selected repository's changes */
 #changes-list {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-
   ul {
     list-style-type: none;
     overflow-y: scroll;
     margin: 0;
     padding: 0;
   }
+  border-style: solid;
 
   li {
     white-space: nowrap;
