Update class name

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -1,7 +1,7 @@
 @import "../mixins";
 
 /** A React component holding the commit message entry */
-#commit-message {
+.commit-form {
   border-top: 1px solid var(--box-border-color);
   flex-direction: column;
   flex-shrink: 0;
