--- a/app/styles/ui/_comparison-graph.scss
+++ b/app/styles/ui/_comparison-graph.scss
@@ -2,6 +2,7 @@
 
 /** A React component holding comparison graph */
 #comparison-graph {
+  border-top: 1px solid var(--box-border-color);
   display: flex;
   flex-direction: column;
   height: 100px;
