--- a/app/styles/ui/_panel.scss
+++ b/app/styles/ui/_panel.scss
@@ -5,11 +5,12 @@
   flex: 1;
 
   &:last-child {
-    border-right: none;    
+    border-right: none;
   }
 }
 
 .panel-container {
+  border-top: 1px solid var(--box-border-color);
   display: flex;
   flex-direction: row;
   flex: 1;
