Make button background color white
Gray wasn’t very visible in the commit area.

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -22,7 +22,7 @@
   --background-color: $white;
 
 
-  --button-background: $lighterGray;
+  --button-background: $white;
   --button-hover-background: $white;
 
   // Typography
