update gray and button border color

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -13,7 +13,7 @@
   $blue: #4ca6eb;
   $darkGray: #5f717f;
   $orange: #c9510c;
-  $gray: #ccc;
+  $gray: #C6CACC;
   $lightGray: #E3E7E9;
   $lighterGray: #f9f9f9;
   $white: #fff;
@@ -22,6 +22,7 @@
   --background-color: $white;
 
 
+  --button-border-color: $gray;
   --button-background: $white;
   --button-hover-background: $white;
 
