--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -15,6 +15,8 @@
     .avatar {
       width: 48px;
       height: 48px;
+      flex-shrink: 0;
+
       border-radius: 4px;
       align-self: center;
     }
