--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -97,3 +97,11 @@ button {
   height: 100%;
   width: 100%;
 }
+
+.blankslate {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
