alternative bg-color for blankslates

--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -107,7 +107,7 @@ button {
 }
 
 .bg-alt {
-  background-color: var(--box-alt-background-color);
+  background-color: var(--box-alt-background-color) !important;
 }
 
 .blankslate {
