Fix some styling in our Brave New World

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -7,10 +7,19 @@
   flex: 1;
 
   .files {
+    display: flex;
+    flex: 1;
+
     .path {
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
     }
   }
+}
+
+#commit-summary-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
