--- a/app/styles/ui/_list.scss
+++ b/app/styles/ui/_list.scss
@@ -1,16 +1,5 @@
 .list {
 
-  // The list-virtualized class is a specialization of list that uses
-  // GPU transforms and other techniques to minimize the number of DOM
-  // elements needed to visualize the list in the current viewport.
-  &-virtualized {
-
-    overflow: auto;
-    transform: translate3d(0, 0, 0);
-    position: relative;
-
-    .list-item { position: absolute; }
-  }
 }
 
 .list-item {
@@ -20,6 +9,7 @@
   align-items: center;
 
   width: 100%;
+  height: 100%;
 
   &.selected {
     color: var(--box-selected-text-color);
