Reset some properties inherited from global button styles

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -64,6 +64,8 @@
       margin: 0;
       overflow: hidden;
       border: none;
+      box-shadow: none;
+      border-radius: 0px;
 
       color: #000;
       background-color: transparent;
