--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -20,6 +20,7 @@
 
   --text-color: $darkGray;
   --background-color: $white;
+  --alt-background-color: $lightGray;
 
 
   --button-background: $lighterGray;
