--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -8,7 +8,7 @@
 
     .list-item {
       border-bottom: 1px solid var(--box-border-color);
-      padding: 10px;
+      padding: var(--spacing);
     }
 
     .path {
