Add and style commit meta data

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -113,6 +113,7 @@
   --darwin-title-bar-height: 37px;
 
   --spacing: 10px;
+  --spacing-half: calc(var(--spacing) / 2);
   --border-radius: 3px;
 
 }
