--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -20,7 +20,7 @@
 }
 
 .commit-summary {
-  &-title,
+  &-header,
   &-description {
     border-bottom: 1px solid var(--box-border-color);
     padding: var(--spacing);
@@ -29,6 +29,7 @@
   &-title {
     font-size: 16px;
     font-weight: var(--font-weight-light);
+    margin-bottom: var(--spacing-half);
   }
 
   &-description {
@@ -37,5 +38,20 @@
     &:empty {
       display: none;
     }
+  }
+
+  &-meta {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &-meta-item {
+    float: left;
+    margin-right: var(--spacing);
+  }
+
+  &-meta-icon svg {
+    vertical-align: bottom;
   }
 }
