Target the octicon css class directly

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -49,9 +49,9 @@
   &-meta-item {
     float: left;
     margin-right: var(--spacing);
-  }
 
-  &-meta-icon svg {
-    vertical-align: bottom;
+    .octicon {
+      vertical-align: bottom;
+    }
   }
 }
