Add another level of spacing

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -114,6 +114,7 @@
 
   --spacing: 10px;
   --spacing-half: calc(var(--spacing) / 2);
+  --spacing-third: calc(var(--spacing) / 3);
   --border-radius: 3px;
 
 }
