--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -56,7 +56,7 @@
     max-width: calc(33% - var(--spacing));
 
     .octicon {
-      margin-right: 2px;
+      margin-right: var(--spacing-third);
       vertical-align: bottom;
     }
   }
