--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -115,6 +115,8 @@
   --spacing: 10px;
   --spacing-half: calc(var(--spacing) / 2);
   --spacing-third: calc(var(--spacing) / 3);
+
   --border-radius: 3px;
+  --base-border: 1px solid var(--box-border-color);
 
 }
