--- a/app/styles/ui/_list.scss
+++ b/app/styles/ui/_list.scss
@@ -18,7 +18,10 @@
     &:focus {
       color: var(--box-selected-active-text-color);
       background-color: var(--box-selected-active-background-color);
+
+      .octicon  {
+        fill: var(--box-selected-active-text-color);
+      }
     }
   }
-
 }
