Background color tweak

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -16,6 +16,7 @@
 
 .changes-panel {
   &-header {
+    background: var(--alt-background-color);
     border-bottom: 1px solid var(--box-border-color);
     box-shadow: 0 2px 2px #f0f0f0;
     padding: var(--spacing-half);
