--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -15,6 +15,7 @@
 @import "ui/file-diff";
 @import "ui/history";
 @import "ui/repository";
+@import "ui/resizable";
 @import "ui/toolbar";
 @import "ui/segmented-control";
 @import "ui/panel";
