Center changes list header

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -19,11 +19,19 @@
     background: var(--alt-background-color);
     border-bottom: 1px solid var(--box-border-color);
     box-shadow: 0 2px 2px #f0f0f0;
+    display: flex;
     padding: var(--spacing-half);
+  }
+
+  &-header-input {
+    font-weight: var(--font-weight-semibold);
+    flex-grow: 0;
   }
 
   &-header-label {
     font-weight: var(--font-weight-semibold);
+    flex-grow: 1;
+    text-align: center;
   }
 
   .list-item {
