Truncate the commit button at one line.

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -10,4 +10,8 @@
   display: flex;
   background-color: var(--box-alt-background-color);
   padding: var(--spacing);
+
+  .commit-button {
+    @include ellipsis
+  }
 }
