Break long words in the commit description section

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -34,6 +34,7 @@
 
   &-description {
     font-family: var(--font-family-monospace);
+    word-wrap: break-word;
 
     &:empty {
       display: none;
