--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -3,6 +3,10 @@
 /** A React component holding a file diff */
 #file-diff {
   text-align: center;
+
+  .list-item {
+    display: block;
+  }
 }
 
 .diff-text {
