Show an avatar next to the summary field

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -11,6 +11,27 @@
   background-color: var(--box-alt-background-color);
   padding: var(--spacing);
 
+  .summary {
+    display: flex;
+    flex-direction: row;
+
+    .summary-field {
+      flex: 1;
+    }
+
+    .avatar {
+      width: 28px;
+      height: 28px;
+
+      margin-right: 4px;
+
+      border-color: lightGray;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: 3px;
+    }
+  }
+
   .commit-button {
     @include ellipsis
   }
