Use the sans serif font in textarea's too.

--- a/app/styles/ui/_forms.scss
+++ b/app/styles/ui/_forms.scss
@@ -9,6 +9,7 @@ textarea {
   border-radius: var(--border-radius);
   color: currentColor;
   font-size: var(--font-size);
+  font-family: var(--font-family-sans-serif);
   margin-bottom: var(--spacing);
   padding: calc(var(--spacing) / 2);
 
