--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,6 +1,7 @@
 .branches-popup {
-  .list-item {
-    padding: var(--spacing-half) var(--spacing);
+  .branches-list-content {
+    padding: var(--spacing-third) var(--spacing);
+    font-size: 11px;
   }
 }
 
@@ -8,6 +9,5 @@
   background: #F9F9F9;
   border-top: 1px solid #E2E6E8;
   border-bottom: 1px solid #E2E6E8;
-  display: block;
   flex-grow: 1;
 }
