--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -1,9 +1,9 @@
 .popup {
   padding: var(--spacing);
+}
 
-  &-content {
-    border: 1px solid #E3E7E9;
-    border-radius: var(--border-radius);
-    background: var(--background-color);
-  }
+.popup-content {
+  border: var(--base-border);
+  border-radius: var(--border-radius);
+  background: var(--background-color);
 }
