Move react styles to stylesheet

--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -1,5 +1,15 @@
 .popup {
   padding: var(--spacing);
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  background-color: var(--box-alt-background-color);
+  position: absolute;
+  border: var(--base-border);
+  border-radius: var(--border-radius);
 }
 
 .popup-content {
