--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -10,6 +10,7 @@
   position: absolute;
   border: var(--base-border);
   border-radius: var(--border-radius);
+  box-shadow: 0 0 7px rgba(0,0,0,0.15);
 }
 
 .popup-content {
