Generalize the toolbar

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -17,5 +17,5 @@
 @import "ui/repository";
 @import "ui/resizable";
 @import "ui/toolbar";
-@import "ui/segmented-control";
+@import "ui/tab-bar";
 @import "ui/panel";
