--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -1,4 +1,4 @@
-.segmented-control {
+.tab-bar {
 
   &-item {
     --border-radius: 5px;
@@ -7,8 +7,8 @@
     border: 1px solid var(--box-border-color);
 
     // This makes it so that we never render a double-width item border.
-    // It has the unintended consequence of making it impossible to have
-    // a segmented-control with just one item but we can live with that.
+    // It has the unintended consequence of making it impossible to have a tab
+    // bar with just one item but we can live with that.
     border-right-width: 0;
     padding: 5px 20px;
 
@@ -22,9 +22,9 @@
     }
 
     // We intentionally swap foreground and background here to create
-    // a more intense selected state. The segmented control is kind of
-    // a special snowflake in so far that it doesn't have an active
-    // selection state, just a selected one.
+    // a more intense selected state. The tab bar is kind of a special snowflake
+    // in so far that it doesn't have an active selection state, just a selected
+    // one.
     &.selected {
       background-color: var(--box-selected-text-color);
       color: var(--box-selected-background-color);
