Use a more descriptive classname

--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,4 +1,4 @@
-.branches-popup {
+.branches-list-container {
   .branches-list-content {
     padding: var(--spacing-third) var(--spacing);
     font-size: 11px;
