Update tab-bar styles

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -126,4 +126,6 @@
   --border-radius: 3px;
   --base-border: 1px solid var(--box-border-color);
 
+  --tab-bar-active-color: #3D76C2;
+  --tab-bar-background-color: #EDEDED;
 }
