--- a/app/styles/ui/_add-existing-repository.scss
+++ b/app/styles/ui/_add-existing-repository.scss
@@ -2,15 +2,6 @@
   .file-picker {
     display: flex;
     flex-direction: row;
-
-    label {
-      display: flex;
-      align-items: center;
-      flex: 1;
-
-      input {
-        flex: 1;
-      }
-    }
+    margin: var(--spacing) 0;
   }
 }
