--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -18,3 +18,6 @@
   border-radius: var(--border-radius);
   background: var(--background-color);
 }
+.popup-actions {
+  border-top: var(--base-border);
+}
