--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -18,6 +18,16 @@
   border-radius: var(--border-radius);
   background: var(--background-color);
 }
+
+.popup-navigation {
+  .tab-bar-item {
+    display: inline-block;
+    padding: 3px 20px;
+    text-align: center;
+    width: 33%;
+  }
+}
+
 .popup-actions {
   border-top: var(--base-border);
 }
