Show some branch info

--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,7 +1,14 @@
 .branches-list-container {
   .branches-list-content {
+    display: flex;
+    flex: 1;
+
     padding: var(--spacing-third) var(--spacing);
     font-size: 11px;
+  }
+
+  .branches-list-content:hover {
+    background: var(--box-alt-background-color);
   }
 }
 
@@ -16,10 +23,6 @@
 .branches-list-item,
 .branches-list-label {
   flex-grow: 1;
-}
-
-.branches-list-item:hover {
-  background: var(--box-alt-background-color);
 }
 
 .branches-list-label {
