--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -7,7 +7,7 @@ input[type='submit'] {
 
   // TODO: Add varaibles for half and third spacing
   padding: calc(var(--spacing) / 2) var(--spacing);
-  
+
   border: 1px solid var(--box-border-color);
   border-radius: var(--border-radius);
 
@@ -17,5 +17,16 @@ input[type='submit'] {
 
   &:active {
     box-shadow: inset 0 0 1px rgba(5, 5, 5, 0.15);
+  }
+}
+
+.btn-primary {
+  background-color: var(--button-primary-background-color);
+  border: none;
+  color: var(--button-primary-text-color);
+  font-weight: 600;
+
+  &:hover {
+    background-color: var(--button-primary-hover-background-color);
   }
 }
