port colours from existing desktop app

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -30,11 +30,11 @@
 }
 
 .diff-add-selected {
-  background: blue; // TODO: actual colour goes here
+  background: #5A93E0;
 }
 
 .diff-add-hover {
-  background: green; // TODO: actual colour goes here
+  background: #116CD6;
 }
 
 .diff-delete {
@@ -42,9 +42,9 @@
 }
 
 .diff-delete-selected {
-  background: orange; // TODO: actual colour goes here
+  background: #5A93E0;
 }
 
 .diff-delete-hover {
-  background: red; // TODO: actual colour goes here
+  background: #116CD6;
 }
