Add styles for hunks

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -48,3 +48,13 @@
 .diff-delete-hover {
   background: #116CD6;
 }
+
+.diff-hunk {
+  background-color: #f8f8ff;
+  height: 100%;
+
+  .before,
+  .after {
+    border-color: #e4e4fe;
+  }
+}
